Fix first-screen: mobile spacing, letter spacing [fix/AG-007]

--- a/src/components/Heading/heading.module.scss
+++ b/src/components/Heading/heading.module.scss
@@ -63,6 +63,7 @@
 	@include media-mobile {
 		font-size: 34px;
 		line-height: 38.08px;
+		letter-spacing: 0.02em;
 	}
 }
 
